force-app/main/default/objects/Discount_Request__c/Discount_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks discount requests raised by sales reps on Opportunities. Routes to the appropriate approver queue based on the discount tier configured in Discount_Approval_Tier__mdt.</description>
    <label>Discount Request</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Discount Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>