force-app/main/default/objects/Discount_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>The User who approved or rejected this request. Stamped by the trigger when Status changes to Approved or Rejected.</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Discount Requests</relationshipLabel>
    <relationshipName>Approved_Discount_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>