force-app/main/default/objects/Discount_Request__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Comments from the approver. Required when Status is set to Rejected — enforced by the trigger.</description>
    <label>Approver Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>