force-app/main/default/objects/Discount_Request__c/fields/Decision_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timestamp__c</fullName>
    <description>Date and time when the approver made their decision. Stamped by the trigger on Status change.</description>
    <label>Decision Timestamp</label>
    <type>DateTime</type>
</CustomField>