force-app/main/default/objects/Discount_Request__c/fields/Final_Discount__c.field-meta.xml
<CustomField>
    <fullName>Final_Discount__c</fullName>
    <description>Snapshot of the approved discount percentage written back to Opportunity.Discount__c on approval. Preserved for audit even if the request is later recalled.</description>
    <label>Final Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>