force-app/main/default/objects/Discount_Request__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Indicates whether this is the active discount request for the Opportunity. Only one active request per Opportunity is allowed at a time.</description>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>