force-app/main/default/objects/Discount_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Justification provided by the sales rep when submitting the discount request.</description>
    <label>Reason / Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>