force-app/main/default/objects/Discount_Request__c/fields/Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount__c</fullName>
    <description>Discount percentage requested by the sales rep. Must be between 0 and 100. Drives tier selection and queue routing.</description>
    <label>Requested Discount (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>