force-app/main/default/objects/Discount_Request__c/fields/Required_Approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver_Level__c</fullName>
    <description>Snapshot of the approver level at the time the request was created. Preserved even if the Custom Metadata tier config changes later.</description>
    <label>Required Approver Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>